--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
   <color name="teal_700">#FF018786</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="dark_grey">#292929</color>
+  <color name="light_grey">#A9A9A9</color>
+  <color name="custom_notification_background">@android:color/background_light</color>
+  <color name="custom_notification_text">@android:color/primary_text_light</color>
 </resources>
